--- a/Readme
+++ b/Readme
@@ -1,2 +1,2 @@
-God said, Let there be football: and there was Messi.
+God said, Let there be football: and there is Messi.
 Alan Shearer, "But I just think Barcelona will have too much for them over two games — mainly because of that guy Lionel Messi."
